name:                write-you-a-scheme
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/pepegar/write-you-a-scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Pepe García
maintainer:          jl.garhdez@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable write-you-a-scheme
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec == 3.1.9
